@@ -50,7 +50,7 @@ S3method(to_basic,default)
 export("%>%")
 export(add_data)
 export(add_lines)
-export(add_points)
+export(add_markers)
 export(add_polygons)
 export(add_ribbons)
 export(add_text)
