@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/add.R
-\name{add_points}
-\alias{add_points}
+\name{add_markers}
+\alias{add_markers}
 \title{Add points to a plotly vis}
 \usage{
-add_points(p, ...)
+add_markers(p, ...)
 }
 \description{
 Add points to a plotly vis
